--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body{
 }
 .clock{
   color: white;
-  font-size: 6rem;
+  font-size: 12vw;
   font-weight: bold;
   text-align: center;
   font-family: monospace;
